--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "fuse.js": "^7.1.0",
     "ngx-sonner": "^3.1.0",
+    "number-flow": "^0.5.9",
     "rxjs": "~7.8.0",
     "tailwind-merge": "^3.4.0",
     "tslib": "^2.3.0",
