--- a/package.json
+++ b/package.json
@@ -2,27 +2,29 @@
   "name": "heroicons-animated-angular",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "dev": "vite",
+    "start": "vite",
+    "build": "vite build",
+    "serve:ssr": "node dist/analog/server/index.mjs",
     "build:lib": "ng build @heroicons-animated/angular",
-    "watch": "ng build --watch --configuration development",
     "lint": "ultracite check",
     "type-check": "ngc -p tsconfig.app.json && ngc -p packages/angular/tsconfig.lib.json",
-    "format": "ultracite fix",
-    "format:check": "ultracite check",
     "check": "ultracite check",
     "fix": "ultracite fix"
   },
   "private": true,
   "dependencies": {
+    "@analogjs/router": "^2.2.3",
+    "@angular/cdk": "^19.2.19",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
+    "@angular/platform-server": "^19.2.18",
     "@angular/router": "^19.2.0",
+    "@spartan-ng/brain": "0.0.1-alpha.563",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fuse.js": "^7.1.0",
@@ -31,18 +33,22 @@
     "rxjs": "~7.8.0",
     "tailwind-merge": "^3.4.0",
     "tslib": "^2.3.0",
+    "tw-animate-css": "^1.4.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@analogjs/platform": "^2.2.3",
     "@angular-devkit/build-angular": "^19.2.19",
     "@angular/cli": "^19.2.19",
     "@angular/compiler-cli": "^19.2.0",
     "@biomejs/biome": "2.3.15",
+    "@spartan-ng/cli": "0.0.1-alpha.563",
     "@tailwindcss/postcss": "^4.1.18",
     "ng-packagr": "^19.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.7.2",
-    "ultracite": "7.2.1"
+    "ultracite": "7.2.1",
+    "vite": "^7.3.1"
   }
 }
