--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
+    "types": ["vite/client"],
     "paths": {
       "@heroicons-animated/angular": ["packages/angular/src/index.ts"]
     }
